[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/waterways/icons/create.svg" type="Texture" id=1]
[ext_resource path="res://addons/waterways/icons/select.svg" type="Texture" id=2]
[ext_resource path="res://addons/waterways/icons/delete.svg" type="Texture" id=3]
[ext_resource path="res://addons/waterways/gui/lake_controls.gd" type="Script" id=4]

[node name="LakeControls" type="HBoxContainer"]
margin_right = 128.0
margin_bottom = 26.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_right = 4.0
margin_bottom = 26.0

[node name="Select" type="Button" parent="."]
margin_left = 8.0
margin_right = 36.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="."]
margin_left = 40.0
margin_right = 68.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
margin_left = 72.0
margin_right = 100.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 26.0

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 112.0
margin_right = 204.0
margin_bottom = 26.0
pressed = true
text = "Show Grid"
flat = true

[connection signal="pressed" from="Select" to="." method="_on_select"]
[connection signal="pressed" from="Add" to="." method="_on_add"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
